# Football-Analysis-System

./: .envexample  .gitignore  README.md  Yolo_model_inference.py  football-object-detection.ipynb  main.py  pyproject.toml
Research/: 01_Data_Ingestion.ipynb  color_assignment.ipynb  football-object-detection.ipynb
player_ball_assigner/: player_ball_assigner.py
stubs/: track_stubs.pkl
team_assigner/: team_assigner.py
trackers/: tracker.py
utils/: __init__.py  bbox_utils.py  video_utils.py
